--- a/style.css
+++ b/style.css
@@ -995,7 +995,7 @@ input.pass:hover {
     overflow: hidden;
     border-radius: 7px;
     opacity: 0;
-    transition: opacity 0.2s ease-in-out, transform 0.4s ease,
+    transition: opacity 0.3s ease-in-out, transform 0.4s ease,
         width 0.15s ease-in-out, height 0.15s ease-in-out,
         top 0.12s ease-in-out, left 0.12s ease-in-out;
     pointer-events: none;
@@ -1005,16 +1005,16 @@ input.pass:hover {
 .app-window.open.dragging,
 .app-window.minimized.dragging,
 .app-window.hidden.dragging {
-    transition: opacity 0.2s ease-in-out, transform 0.4s ease;
+    transition: opacity 0.3s ease-in-out, transform 0.4s ease;
 }
 
 .app-window.mini,
 .app-window.open.mini,
 .app-window.minimized.mini,
 .app-window.hidden.mini {
-    transition: opacity 0.2s ease-in-out, transform 0.4s ease,
+    transition: opacity 0.3s ease-in-out, transform 0.4s ease,
         width 0.15s ease-in-out, height 0.15s ease-in-out,
-        top 0.12s ease-in-out, left 0.35s ease-in-out;
+        top 0.35s ease-in-out, left 0.35s ease-in-out;
 }
 
 .app-window::before {
@@ -1140,8 +1140,8 @@ input.pass:hover {
 
 .app-window.hidden {
     opacity: 0;
-    transform: translateY(0) scale(0);
-    transition: opacity 0.2s ease-in-out, transform 0.55s ease,
+    transform: scale(0);
+    transition: opacity 0.3s ease-in-out, transform 0.55s ease,
         width 0.15s ease-in-out, height 0.15s ease-in-out,
         top 0.12s ease-in-out, left 0.12s ease-in-out;
     pointer-events: none;
@@ -1149,8 +1149,8 @@ input.pass:hover {
 
 .app-window.minimized {
     opacity: 0;
-    transform: translateY(300px) scale(0);
-    transition: opacity 0.2s ease-in-out, transform 0.4s ease,
+    transform: scale(0);
+    transition: opacity 0.3s ease-in-out, transform 0.4s ease,
         width 0.15s ease-in-out, height 0.15s ease-in-out,
         top 0.12s ease-in-out, left 0.12s ease-in-out;
     pointer-events: none;
@@ -1158,11 +1158,11 @@ input.pass:hover {
 
 .app-window.open {
     opacity: 1;
-    transition: opacity 0.2s ease-in-out, transform 0.4s ease,
+    transition: opacity 0.3s ease-in-out, transform 0.4s ease,
         width 0.15s ease-in-out, height 0.15s ease-in-out,
         top 0.12s ease-in-out, left 0.12s ease-in-out;
     pointer-events: auto;
-    transform: translateY(0) scale(1);
+    transform: scale(1);
 }
 
 .context-menu {
