--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ input.pass:hover {
     pointer-events: none;
 }
 
-.screen.removeDOM {
+.removeDOM {
     display: none;
 }
 
@@ -1088,10 +1088,6 @@ input.pass:hover {
         width 0.15s ease-in-out, height 0.15s ease-in-out,
         top 0.12s ease-in-out, left 0.12s ease-in-out;
     pointer-events: none;
-}
-
-.app-window.removeDOM {
-    display: none;
 }
 
 .app-window.minimized {
