--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     align-items: center;
     min-height: 100vh;
     height: 100vh;
-    background-color: black;
+    background-color: #000000;
     overflow: hidden;
 }
 
