--- a/style.css
+++ b/style.css
@@ -782,7 +782,7 @@ input.pass:hover {
 }
 
 .start-menu {
-    position: absolute;
+    position: fixed;
     width: 300px;
     height: 220px;
     background-color: rgba(50, 50, 50, 0.4);
@@ -2274,7 +2274,7 @@ canvas {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    position: absolute;
+    position: fixed;
 }
 
 .quick-settings::before {
